# arcbuild

./: .editorconfig  .gitignore  README.md  arcbuild.cmake  build_test.bat  build_test.py
arcbuild/: arcsoft_sdk.cmake  boot.cmake  build.cmake  core.cmake  mpbase.cmake  update_file_list.cmake  upgrade.cmake
docs/: ArcSoftSDKBuilding.md  README.md
examples/: build.bat  build_test.bat
examples/arcsoft_sdk/: CMakeLists.txt
examples/combine_modules/: CMakeLists.txt
examples/combine_modules/demo/: demo.c
examples/combine_modules/inc/: arcsoft_xxx.h
examples/combine_modules/src/: arcsoft_xxx.c  version.c
examples/hello_world/: CMakeLists.txt
examples/local/: CMakeLists.txt  arcbuild.cmake
examples/local_arcbuild/: .gitignore  CMakeLists.txt
examples/multiple_modules_sdk/: CMakeLists.txt
examples/multiple_modules_sdk/samplecodes/: samplecode.c
examples/simple_project/: CMakeLists.txt
examples/simple_project/inc/: arcsoft_xxx.h
examples/simple_project/src/: arcsoft_xxx.c
examples/simple_project/src/bar/: bar.c
examples/simple_project/src/cxx/: cxx_test.cpp  stl_test.cpp
examples/simple_project/src/foo/: foo.c  foo.h
examples/simple_sdk/: CMakeLists.txt  releasenotes.txt
examples/simple_sdk/src/: arcsoft_xxx.c
examples/simple_sdk_with_mpbase/: CMakeLists.txt
examples/simple_sdk_with_mpbase/src/: arcsoft_xxx.c
plugins/: arcsoft_sdk.cmake  mpbase.cmake  update_file_list.cmake
toolchains/: android-ndk.cmake  ctc.cmake  first-clang.cmake  first-gcc.cmake  gcc-arm-linux.cmake  gcc-linux-sysroot.cmake  gcc-version.cmake  ios-xcode.cmake  tizen1.0.cmake  tizen2.2.cmake
